--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -47,9 +47,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 28, 128)           3712      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 28, 64)            8256      \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 1792)              0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 10)                17930     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 29,898\n",
+      "Trainable params: 29,898\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.Sequential([\n",
     "    tf.keras.layers.Dense(128, input_shape=(28,28),activation='relu'),\n",
@@ -64,9 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 1.1808 - accuracy: 0.7882\n",
+      "Epoch 2/5\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.4707 - accuracy: 0.8364\n",
+      "Epoch 3/5\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4384 - accuracy: 0.8464\n",
+      "Epoch 4/5\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.4127 - accuracy: 0.8550\n",
+      "Epoch 5/5\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.3817 - accuracy: 0.8644\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1c33aa99610>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.compile(loss='sparse_categorical_crossentropy',optimizer=\"adam\",metrics=['accuracy'])\n",
     "model.fit(trainX,trainY,epochs=5)"
@@ -74,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
@@ -95,9 +146,9 @@
       " max_pooling2d_1 (MaxPooling  (None, 7, 7, 64)         0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 3136)              0         \n",
+      " flatten_1 (Flatten)         (None, 3136)              0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 10)                31370     \n",
+      " dense_3 (Dense)             (None, 10)                31370     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 64,746\n",
@@ -128,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,17 +187,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 29s 15ms/step - loss: 0.4217 - accuracy: 0.8496\n",
+      "1875/1875 [==============================] - 30s 16ms/step - loss: 0.4226 - accuracy: 0.8495\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 29s 15ms/step - loss: 0.2797 - accuracy: 0.9011\n",
+      "1875/1875 [==============================] - 31s 17ms/step - loss: 0.2825 - accuracy: 0.9001\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 29s 16ms/step - loss: 0.2375 - accuracy: 0.9151\n",
+      "1875/1875 [==============================] - 31s 16ms/step - loss: 0.2421 - accuracy: 0.9137\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 30s 16ms/step - loss: 0.2089 - accuracy: 0.9245\n",
+      "1875/1875 [==============================] - 30s 16ms/step - loss: 0.2141 - accuracy: 0.9231\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 29s 15ms/step - loss: 0.1866 - accuracy: 0.9325\n",
-      "313/313 [==============================] - 1s 4ms/step - loss: 0.2379 - accuracy: 0.9168\n",
-      "[0.23791396617889404, 0.9168000221252441]\n"
+      "1875/1875 [==============================] - 29s 16ms/step - loss: 0.1932 - accuracy: 0.9293\n",
+      "313/313 [==============================] - 1s 4ms/step - loss: 0.2860 - accuracy: 0.9000\n",
+      "[0.2860320508480072, 0.8999999761581421]\n"
      ]
     }
    ],
@@ -186,6 +237,206 @@
     "model2.fit(trainX,trainY,validation_data=(testX,testY),epochs=5)\n",
     "score = model2.evaluate(testX,testY)\n",
     "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _update_step_xla while saving (showing 3 of 3). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models/model2\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models/model2\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model2.save('models/model2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 28, 28, 32)        544       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 14, 14, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 14, 14, 64)        32832     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 7, 7, 64)         0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 3136)              0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 10)                31370     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 64,746\n",
+      "Trainable params: 64,746\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "313/313 [==============================] - 1s 4ms/step - loss: 0.2860 - sparse_categorical_accuracy: 0.9000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.2860320508480072, 0.8999999761581421]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model = tf.keras.models.load_model('models/model2')\n",
+    "loaded_model.summary()\n",
+    "loaded_model.compile(loss=\"sparse_categorical_crossentropy\",optimizer='adam',metrics='sparse_categorical_accuracy')\n",
+    "loaded_model.evaluate(testX,testY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback = tf.keras.callbacks.ModelCheckpoint(\n",
+    "    filepath='checkpoint/mnist',\n",
+    "    monitor = 'val_acc',\n",
+    "    mode = 'max',\n",
+    "    save_weights_only=True,\n",
+    "    save_freq='epoch'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1875/1875 [==============================] - 31s 17ms/step - loss: 0.1757 - accuracy: 0.9357 - val_loss: 0.2389 - val_accuracy: 0.9150\n",
+      "Epoch 2/5\n",
+      "1875/1875 [==============================] - 31s 17ms/step - loss: 0.1570 - accuracy: 0.9424 - val_loss: 0.2456 - val_accuracy: 0.9183\n",
+      "Epoch 3/5\n",
+      "1875/1875 [==============================] - 31s 17ms/step - loss: 0.1440 - accuracy: 0.9476 - val_loss: 0.2589 - val_accuracy: 0.9117\n",
+      "Epoch 4/5\n",
+      "1875/1875 [==============================] - 31s 17ms/step - loss: 0.1322 - accuracy: 0.9517 - val_loss: 0.2614 - val_accuracy: 0.9129\n",
+      "Epoch 5/5\n",
+      "1875/1875 [==============================] - 31s 16ms/step - loss: 0.1202 - accuracy: 0.9561 - val_loss: 0.2700 - val_accuracy: 0.9144\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1c3354085b0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.compile(loss='sparse_categorical_crossentropy',optimizer=\"adam\",metrics=['accuracy'])\n",
+    "model2.fit(trainX,trainY,validation_data=(testX,testY),epochs=5,callbacks=[callback])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_2 (Conv2D)           (None, 28, 28, 32)        544       \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 14, 14, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 14, 14, 64)        32832     \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 7, 7, 64)         0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten_2 (Flatten)         (None, 3136)              0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 10)                31370     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 64,746\n",
+      "Trainable params: 64,746\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "313/313 [==============================] - 1s 4ms/step - loss: 0.2700 - accuracy: 0.9144\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.2699878513813019, 0.9143999814987183]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model3 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Conv2D(32,(4,4),padding=\"same\",activation=\"relu\",input_shape=(28,28,1)),\n",
+    "    tf.keras.layers.MaxPooling2D((2,2)),\n",
+    "    tf.keras.layers.Conv2D(64,(4,4),padding=\"same\",activation=\"relu\",input_shape=(28,28,1)),\n",
+    "    tf.keras.layers.MaxPooling2D((2,2)),\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax'),\n",
+    "\n",
+    "])\n",
+    "\n",
+    "model3.summary()\n",
+    "model3.compile(loss='sparse_categorical_crossentropy',optimizer=\"adam\",metrics=['accuracy'])\n",
+    "model3.load_weights('checkpoint/mnist')\n",
+    "\n",
+    "model3.evaluate(testX,testY)"
    ]
   }
  ],
