--- a/CatvsDog.ipynb
+++ b/CatvsDog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -431,41 +431,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_3 (Conv2D)           (None, 64, 64, 32)        1568      \n",
+      " conv2d (Conv2D)             (None, 64, 64, 32)        1568      \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPooling  (None, 32, 32, 32)       0         \n",
+      " max_pooling2d (MaxPooling2D  (None, 32, 32, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 32, 32, 64)        32832     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 16, 16, 64)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 32, 32, 64)        32832     \n",
+      " dropout (Dropout)           (None, 16, 16, 64)        0         \n",
       "                                                                 \n",
-      " max_pooling2d_4 (MaxPooling  (None, 16, 16, 64)       0         \n",
+      " conv2d_2 (Conv2D)           (None, 16, 16, 128)       131200    \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 8, 8, 128)        0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 16, 16, 64)        0         \n",
+      " flatten (Flatten)           (None, 8192)              0         \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 16, 16, 128)       131200    \n",
+      " dense (Dense)               (None, 128)               1048704   \n",
       "                                                                 \n",
-      " max_pooling2d_5 (MaxPooling  (None, 8, 8, 128)        0         \n",
-      " 2D)                                                             \n",
+      " dropout_1 (Dropout)         (None, 128)               0         \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 8192)              0         \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 128)               1048704   \n",
-      "                                                                 \n",
-      " dropout_3 (Dropout)         (None, 128)               0         \n",
-      "                                                                 \n",
-      " dense_3 (Dense)             (None, 1)                 129       \n",
+      " dense_1 (Dense)             (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,214,433\n",
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -504,24 +504,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "313/313 [==============================] - 68s 214ms/step - loss: 0.6219 - accuracy: 0.6490 - val_loss: 0.5672 - val_accuracy: 0.7066\n",
+      "313/313 [==============================] - 67s 210ms/step - loss: 0.6309 - accuracy: 0.6305 - val_loss: 0.5513 - val_accuracy: 0.7158\n",
       "Epoch 2/5\n",
-      "313/313 [==============================] - 62s 199ms/step - loss: 0.5198 - accuracy: 0.7419 - val_loss: 0.5250 - val_accuracy: 0.7424\n",
+      "313/313 [==============================] - 63s 199ms/step - loss: 0.5260 - accuracy: 0.7395 - val_loss: 0.5148 - val_accuracy: 0.7460\n",
       "Epoch 3/5\n",
-      "313/313 [==============================] - 65s 206ms/step - loss: 0.4653 - accuracy: 0.7771 - val_loss: 0.4449 - val_accuracy: 0.7944\n",
+      "313/313 [==============================] - 63s 200ms/step - loss: 0.4567 - accuracy: 0.7830 - val_loss: 0.4829 - val_accuracy: 0.7766\n",
       "Epoch 4/5\n",
-      "313/313 [==============================] - 63s 199ms/step - loss: 0.4122 - accuracy: 0.8141 - val_loss: 0.4049 - val_accuracy: 0.8200\n",
+      "313/313 [==============================] - 62s 199ms/step - loss: 0.4015 - accuracy: 0.8168 - val_loss: 0.4140 - val_accuracy: 0.8276\n",
       "Epoch 5/5\n",
-      "313/313 [==============================] - 63s 202ms/step - loss: 0.3720 - accuracy: 0.8335 - val_loss: 0.3723 - val_accuracy: 0.8340\n"
+      "313/313 [==============================] - 63s 199ms/step - loss: 0.3524 - accuracy: 0.8431 - val_loss: 0.4301 - val_accuracy: 0.8082\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x21d274ac100>"
+       "<keras.callbacks.History at 0x163ca38c9a0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
